--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,17 +2,41 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-image: linear-gradient(172.47deg, #660080 0.99%, #160e33 66.37%);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 3620px;
+  font-family: Poppins, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+@media screen and (max-width: 998px) and (min-width: 770px) {
+  html,
+  body {
+    padding: 0;
+    margin: 0;
+    background-image: linear-gradient(172.47deg, #660080 0.99%, #160e33 66.37%);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 3340px;
+  }
+}
 a {
   color: inherit;
   text-decoration: none;
 }
 
+li {
+  list-style: none;
+}
+
+ul {
+  padding-left: 0px;
+}
+
 * {
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,5 +46,189 @@ a {
   body {
     color: white;
     background: black;
+  }
+}
+.navbar-toggler {
+  border-color: white;
+}
+
+#nav-link-1,
+#nav-link-2 {
+  gap: 32px;
+}
+
+#text-span-1 {
+  color: #ffa000;
+}
+/* container-title */
+
+#container-title {
+  margin-top: 100px;
+}
+#big-icon {
+  left: 650px;
+  top: 40px;
+}
+#decoration-1 {
+  top: 240px;
+  left: -200px;
+}
+@media screen and (max-width: 1000px) {
+  #nav-link-1,
+  #nav-link-2 {
+    gap: 0px;
+  }
+  #big-icon {
+    display: none;
+  }
+  #decoration-1 {
+    left: -70px;
+    width: 150px;
+    height: 150px;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  #big-icon {
+    left: 550px;
+    width: 500px;
+    height: 500px;
+  }
+  #text-title-1,
+  #text-title-2 {
+    width: 800px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  #big-icon {
+    left: 680px;
+    top: -40px;
+    width: 700px;
+    height: 700px;
+  }
+}
+
+/* CONTAINER-BODY */
+#crypto-column {
+  background: rgba(67, 104, 199, 0.12);
+  border-radius: 25px;
+  padding: 20px;
+}
+
+p {
+  width: 80px;
+}
+
+#decoration-2 {
+  top: 1640px;
+  left: -100px;
+}
+
+@media screen and (min-width: 1000px) {
+  #text-body-1,
+  #text-body-2 {
+    width: 800px;
+  }
+  #container-body {
+    margin-top: 400px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  #brand-company {
+    width: 1000px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  #container-body {
+    margin-top: 100px;
+  }
+  #brand-company {
+    width: 800px;
+    height: 100px;
+  }
+  #decoration-2 {
+    top: 1300px;
+    left: -50px;
+    width: 150px;
+    height: 150px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  p {
+    width: 24px;
+    font-size: small;
+  }
+  #brand-company {
+    width: 500px;
+    height: 60px;
+  }
+}
+
+/* CONTAINER-FEATURES */
+#flex-features {
+  height: 80px;
+}
+
+@media screen and (min-width: 1000px) {
+  #container-features {
+    width: 1200px;
+    margin-top: 200px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  #container-features {
+    margin-top: 120px;
+  }
+  #flex-features {
+    height: 80px;
+  }
+  #column {
+    width: 400px;
+  }
+  #column h3 {
+    font-size: larger;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  h5 {
+    font-size: medium;
+  }
+  #column h3 {
+    font-size: medium;
+  }
+  #flex-features {
+    height: 80px;
+  }
+  #column {
+    width: 140px;
+  }
+}
+
+/* CONTAINER-REGISTER */
+#container-register {
+  margin-top: 240px;
+}
+
+/* FOOTER */
+#footer {
+  margin-top: 330px;
+}
+
+#row-footer {
+  margin-top: 40px;
+}
+
+#copyright {
+  margin-top: 100px;
+}
+
+@media screen and (max-width: 1000px) {
+  #copyright {
+    margin-top: 60px;
   }
 }
