--- a/styles/globals.css
+++ b/styles/globals.css
@@ -131,9 +131,6 @@ ul {
     gap: 10px;
     justify-content: center;
   }
-  #brand-company {
-    width: 432px !important;
-  }
   
 }
 @media screen and (max-width: 605px) {
@@ -141,7 +138,7 @@ ul {
     width: 400px;
   }
   #brand-company {
-    width: 400px !important;
+    width: 380px !important;
   }
   #crypto-column {
     width: 95vw !important;
@@ -287,6 +284,7 @@ p {
   width: 540px;
   margin-top: 120px;
   margin-bottom: 30px;
+  z-index: 10;
 }
 #login-container {
   width: 540px;
@@ -313,6 +311,32 @@ p {
   }
   #login-container {
     width: 460px;
+  }
+
+}
+
+@media screen and (max-width: 460px) {
+  #arrow-back {
+    width: 380px;
+  }
+  #login-container {
+    width: 380px;
+  }
+  #form-login {
+    width: 320px;
+  }
+  #login-check {
+    width: 320px;
+  }
+  #div-form-signup {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 320px !important;
+    gap: 12px;
+  }
+  #form-signup {
+    width: 320px !important;
   }
 }
 
